# ppkui_bar

./: .gitignore  Cargo.toml  README.md  bar.toml  launcher.toml  sway.config
src/: args.rs  bar.rs  config.rs  libwaylandsfpanel.rs  main.rs  menu.rs
