[package]
name = "pepekroll-bar"
version = "0.0.1"
authors = ["Aleksei Kharlamov"]
edition = "2018"

[dependencies]
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit" }
andrew = { git = "https://github.com/Smithay/andrew" }
byteorder = "1.3.4"
raqote = "0.8.0"
font-kit = "0.7.1"
