[package]
name = "pepekroll-bar"
version = "0.0.1"
authors = ["Aleksei Kharlamov"]
edition = "2018"

[dependencies]
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit" }
andrew = { git = "https://github.com/Smithay/andrew" }
byteorder = "1.3.4"
serde = "1.0.97"
serde_derive = "1.0"
toml = "0.5.6"
css-color = "0.1"
