[package]
name = "ppkui_bar"
version = "0.0.1"
authors = ["Aleksei Kharlamov"]
edition = "2018"

[[bin]]
name = "ppkui_bar"
path = "src/bar.rs"

[[bin]]
name = "ppkui_menu"
path = "src/menu.rs"

[dependencies]
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit" }
andrew = { git = "https://github.com/Smithay/andrew" }
byteorder = "1.3.4"
serde = "1.0.97"
serde_derive = "1.0"
toml = "0.5.6"
css-color = "0.1"
